# ibf-fpga

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  kernels.cpp
cmake/: add_library_sycl_fpga.cmake  cxx17_filesystem.cmake  set_fpga_device.cmake  sycl_fpga_build_kernels.cmake  sycl_fpga_report_of.cmake  sycl_fpga_set_default_variables.cmake
include/ibf_fpga/opencl/: device_selector.hpp  kernel_loader.hpp
include/ibf_fpga/sycl/: commen.hpp  kernel_minimizer.hpp
include/min_ibf_fpga/backend_opencl/: device_selector.hpp  kernel_loader.hpp  opencl.hpp
include/min_ibf_fpga/backend_sycl/: README.md  collector.cpp  commen.hpp  compute_units.hpp  distributor.cpp  exception_handler.hpp  kernel.cpp  kernel.hpp  kernel.tpp  kernel_ibf.cpp  kernel_ibf.hpp  kernel_ibf_test.cpp  kernel_minimizer.cpp  kernel_minimizer.hpp  kernel_minimizer_test.cpp  min_ibf_constants.hpp  min_ibf_types.hpp  pipe_utils.hpp  shared.hpp  sycl_kernel_ibf.hpp  sycl_kernel_minimizer.hpp
include/min_ibf_fpga/fastq/: fastq_parser.hpp
include/min_ibf_fpga/index/: ibf_data.hpp  ibf_metadata.hpp
include/min_ibf_fpga/io/: print_results.hpp  read_in_binary_data.hpp  write_out_binary_data.hpp
include/min_ibf_fpga/threshold/: kmer_lemma_threshold_table.hpp  threshold_table.hpp
min_example/fpga/dynamic_linking_flow/: CMakeLists.txt  README.md  build_emulator.sh  build_hardware.sh  main.cpp  vector_add.cpp  vector_add.hpp  vector_mul.cpp  vector_mul.hpp
min_example/fpga/host_device_split_code/: CMakeLists.txt
min_example/fpga/host_device_split_code/emulator/: CMakeLists.txt
min_example/fpga/host_device_split_code/src/: host.cpp
min_example/fpga/host_device_split_code/src/kernel/: min_ibf_fpga.hpp
min_example/fpga/host_device_split_code/src/sycl/: run_min_ibf_fpga.hpp  run_min_ibf_fpga_w16_k6.cpp  run_min_ibf_fpga_w16_k6.hpp  run_min_ibf_fpga_w16_k8.cpp  run_min_ibf_fpga_w16_k8.hpp  run_min_ibf_fpga_w18_k6.hpp
min_example/host_device_split_code/: CMakeLists.txt
min_example/host_device_split_code/cmake/: add_library_sycl_fpga.cmake  sycl_fpga_report_of.cmake
min_example/host_device_split_code/fpga/: CMakeLists.txt
min_example/host_device_split_code/src/: CMakeLists.txt  host.cpp  sycl_kernel_loader.hpp
min_example/host_device_split_code/src/emulator/: CMakeLists.txt
min_example/host_device_split_code/src/fpga/: CMakeLists.txt
min_example/host_device_split_code/src/report/: CMakeLists.txt
min_example/host_device_split_code/src/sycl/: run_min_ibf_fpga.tpp  run_min_ibf_fpga_w18_k6.cpp
min_example/opencl/: device_read_only_buffer.hpp  device_write_only_buffer.hpp  print_range.hpp
min_example/opencl/svm/: .gitignore
reports/2023-05-17_pre-optimisation_min-1634/resources/: product_data.js  viewer_data.js
reports/2023-05-17_pre-optimisation_min-1634/resources/json/: area.json  area_src.json  block.json  bottleneck.json  gmv.json  info.json  lmv.json  loop_attr.json  loops.json  mav.json  new_lmv.json  pipeline.json  schedule.json  summary.json  tree.json  warnings.json
reports/2023-05-21_ac_int-replaced_min-1634/resources/: product_data.js  viewer_data.js
reports/2023-05-21_ac_int-replaced_min-1634/resources/json/: area.json  area_src.json  block.json  bottleneck.json  gmv.json  info.json  loop_attr.json  loops.json  mav.json  new_lmv.json  pipeline.json  schedule.json  summary.json  tree.json  warnings.json
reports/2023-05-23_hyper-optimized-handshaking-off_min-57/resources/: product_data.js  viewer_data.js
reports/2023-05-23_hyper-optimized-handshaking-off_min-57/resources/json/: area.json  area_src.json  block.json  bottleneck.json  gmv.json  info.json  lmv.json  loop_attr.json  mav.json  new_lmv.json  pipeline.json  schedule.json  summary.json  tree.json
src/: CMakeLists.txt  fpga_device.cpp  gen_kernel_types.hpp  host.cpp  host.hpp  kernel_w23_k19_b64.hpp  main.cpp
src/emulator/: CMakeLists.txt
src/fpga/: CMakeLists.txt
src/kernel/: kernel.cpp  kernel.hpp
src/report/: CMakeLists.txt
test/: CMakeLists.txt
test/app/: CMakeLists.txt
test/data/: query.fq  raptor_19_19.index  raptor_19_19.index.sh  raptor_23_19.index  raptor_23_19.index.sh
test/fastq/: CMakeLists.txt  fastq_parser_test.cpp
test/ibf/: CMakeLists.txt  RunIBFKernel.hpp  ibf_on_cpu_test.cpp  ibf_opencl_test.cpp  ibf_seqan3_test.cpp  ibf_sycl_test.cpp
test/ibf/fixtures/: all.hpp  ibf_test_fixture.hpp  ibf_w19_k19_query0_test.hpp  ibf_w19_k19_query1_test.hpp  ibf_w19_k19_query2_test.hpp  ibf_w19_k19_query3_test.hpp  ibf_w19_k19_query4_test.hpp  ibf_w23_k19_query0_test.hpp  ibf_w23_k19_query1_test.hpp  ibf_w23_k19_query2_test.hpp  ibf_w23_k19_query3_test.hpp  ibf_w23_k19_query4_test.hpp
test/include/ibf_fpga/test/: assert_equal.hpp
test/include/min_ibf/test/: assert_equal.hpp
test/include/min_ibf_fpga/test/: assert_equal.hpp  assert_loaded_ibf.hpp  load_ibf_index.hpp  min_ibf_test_types.hpp  minimizer_range_t.hpp
test/io/: CMakeLists.txt  print_results_test.cpp  read_in_binary_data_test.cpp  write_out_binary_data_test.cpp
test/min_example/opencl/: check_result.hpp  cl_event_profiling.hpp
test/min_example/opencl/binary/: build.sh  host.cpp
test/min_example/opencl/svm/: add_kernel.cl  build.sh  host.cpp
test/minimizer/: CMakeLists.txt  RunMinimizerKernel.hpp  minimizer_on_cpu_test.cpp  minimizer_opencl_test.cpp  minimizer_seqan3_test.cpp  minimizer_sycl_test.cpp
test/minimizer/fixtures/: all.hpp  minimizer_test_fixture.hpp  minimizer_w19_k19_query0_test.hpp  minimizer_w19_k19_query1_test.hpp  minimizer_w19_k19_query2_test.hpp  minimizer_w19_k19_query3_test.hpp  minimizer_w19_k19_query4_test.hpp  minimizer_w23_k19_query0_test.hpp  minimizer_w23_k19_query1_test.hpp  minimizer_w23_k19_query2_test.hpp  minimizer_w23_k19_query3_test.hpp  minimizer_w23_k19_query4_test.hpp
test/test/: CMakeLists.txt  assert_equal_test.cpp  minimizer_range_t_test.cpp
test/threshold/: CMakeLists.txt  threshold_test.cpp
test/threshold/fixtures/: threshold_tables.hpp
